@@ -1,4 +1,5 @@
 0.6.0 (currently working on)
+- [#1339] Feature: Add a switch that controls when unregistration is possible
 - [#1408] Feature: Create a list of categories
 - [#1874] Fix: Crash on the "my events page" after unregistering from an event
 - [#1873] Fix: Crash when clicking on a CSV icon in mod2
